	  - Wrap more functions, and wrap them better (such as getpwnam).
	  - This release is NOT backward compatible.  Many names are the same, and
	    hopefully they're still compatible, but no effort was made to maintain
	    compatibility.  For example, FileMode was removed and replaced with
	    FilePermissions, to avoid a name conflict with System.IO.FileMode.
	* make-map.cs: Another effective re-write, to clean up the code, produce
	  better output, and produce more output.  For example, most of
	  PosixConvert can be auto-generated, so it is (modulo version delays and
	  bootstrap issues).  `map.c' is now conditional on all macros, and has
	  error checking for invalid/unsupported values.

2004-09-18  Jackson Harper  <jackson@ximian.com>

	* Syscall.cs: Add support for poll ().

2004-09-18  Jackson Harper  <jackson@ximian.com>

	* make-map.cs: Use field value not name for #defines.
		
2004-09-14  Loren Bandiera <lorenb@mmgsecurity.com>

	* Syscall.cs: Added method for getpwnam which uses Passwd
	struct.
	* macros.c: Helper function for getpwnam
	(In committing, Josh Tauberer also added getpwuid.)

2004-07-09  Dick Porter  <dick@ximian.com>

	* PeerCred.cs: Get the unix socket peer credentials.

2004-05-26  Miguel de Icaza  <miguel@ximian.com>

	* Syscall.cs: Do not let the runtime handle strings, as we do not
	own those strings, we must transform the char * into a string
	ourselves. 

2004-05-03  Miguel de Icaza  <miguel@ximian.com>

	* Syscall.cs: Add symlink

2004-04-19  Miguel de Icaza  <miguel@ximian.com>

	* Syscall.cs: Use hex values for FileMode, since C# does not have
	an octal integer mode.

2004-03-30  Joshua Tauberer <tauberer@for.net>

	* Added readlink, strerror, opendir, readdir, closedir
	* Added Mono.Posix.Stat.UnixToDateTime(long unixtime) --> DateTime

2004-03-11  Joshua Tauberer <tauberer@for.net>

	* Syscall.cs: Removed argument to getgid that shouldn't be there.
		Added getusername, getgroupname which wrap getpwuid, getgrgid